# bb-events

./: .gitignore  bb_xml_client.py  bbapi.py  buzzerbeater_descriptions.py  buzzerbeaters.py  first_active_match.py  game.py  match_package.py  moments.py  pyproject.toml  team_buzzerbeaters.py  team_info.py  team_shot_distance_hist.py
src/bb_events/: __init__.py  cli.py  match_package.py  moments.py
src/bb_events/schemas/: match-package-v1.schema.json
tests/: test_match_package.py  test_moments.py
tests/fixtures/: 123786926_boxscore.json
